# libsniffpy

./: .gitignore  Makefile  README.md  build.py  libsniff.pyx  pyproject.toml
sniff/: __init__.py
