[tool.poetry]
name = "libsniffpy"
version = "0.1.2"
description = "A python3 wrapper around libsniff"
authors = ["4thel00z <4thel00z@gmail.com>"]
license = "GPL-3"
readme = "README.md"
homepage = "https://github.com/4thel00z/libsniffpy"
packages = [
    { include = "sniff" }
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
Cython = "^0.29.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
